--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-image: url('../image/bg-light.png');
+    background-image: url('../image/bg-dark.jpg');
     background-size: cover;
     background-position: center center;
     width: 100vw;
@@ -19,10 +19,10 @@ body{
 } 
 .btn-pos{
     position: absolute;
-    width: 15vw;
-    height: 20vh;
-    right: 25vw;
-    bottom: 18vh;
+    width: 10vw;
+    height: 18vh;
+    right: 23vw;
+    bottom: 15vh;
     background-color: rgba(255,255,60,0.5);
     border: none;
     cursor: pointer;
